[gd_scene load_steps=3 format=3 uid="uid://bhof4a8f1hxf2"]

[ext_resource type="Script" path="res://ui/components/practice_stage.gd" id="1_ioa7f"]
[ext_resource type="Texture2D" uid="uid://b2r3yuuj8rdnr" path="res://assets/images/stage_texture_1.png" id="2_ecxwe"]

[node name="PracticeStage" type="Panel"]
custom_minimum_size = Vector2(512, 80)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -40.0
offset_right = 256.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ioa7f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = ":name: Stage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Level_A" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
icon = ExtResource("2_ecxwe")
expand_icon = true

[node name="Level_B" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
icon = ExtResource("2_ecxwe")
expand_icon = true

[node name="Level_C" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
icon = ExtResource("2_ecxwe")
expand_icon = true

[node name="Level_D" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
icon = ExtResource("2_ecxwe")
expand_icon = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/Level_A" to="." method="_on_level_a_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Level_B" to="." method="_on_level_b_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Level_C" to="." method="_on_level_c_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Level_D" to="." method="_on_level_d_pressed"]
